website updation and js fixes

--- a/website_alpha/index.html
+++ b/website_alpha/index.html
@@ -18,7 +18,6 @@
     <ul class="nav-links" id="navLinks">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
@@ -41,7 +40,7 @@
 
     <!-- RIGHT FORM PANEL -->
     <section class="panchanga-section">
-      <h1>Find Your 2025 Birthday</h1>
+      <h1>Find Your 2025 Birthday/Anniversary</h1>
       <form id="panchangaForm">
         <label for="birthDate">Birth Date:</label>
         <input type="date" id="birthDate" required>
